Change GH triggers

--- a/.github/workflows/test_things.yml
+++ b/.github/workflows/test_things.yml
@@ -3,9 +3,13 @@ on:
   pull_request:
     branches:
       - '**'
+      - '!main'
+      - '!staging'
   push:
     branches:
       - '**'
+      - '!main'
+      - '!staging'
 jobs:
   build_deploy:
     runs-on: ubuntu-18.04
